--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 <html>
 
 <head>
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({
+          google_ad_client: "ca-pub-4950570172480148",
+          enable_page_level_ads: true
+     });
+</script>
     <style>
         body {
             -webkit-touch-callout: none;
@@ -33,6 +40,7 @@
 </head>
 
 <body>
+    
     <div id="overlay"></div>
     <div id="effect" class="animated zoomIn">
         <img id="images1" width="100%" height="100%" class="img-responsive img-thumbnail" /><span id="icon" onclick="close1()">&times;</span>
